--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,3 +1,21 @@
 .test {
     height: 40vh;
 }
+
+input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    black;
+}
+input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    black;
+   opacity:  1;
+}
+input::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    black;
+   opacity:  1;
+}
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    black;
+}
+input::-ms-input-placeholder { /* Microsoft Edge */
+   color:    black;
+}
